force-app/main/default/objects/Int_Agreement__c/Int_Agreement__c.object-meta.xml
<CustomObject>
    <description>Int Agreement</description>
    <label>Int Agreement</label>
    <nameField>
        <displayFormat>AGR-{0000000000}</displayFormat>
        <label>Agreement Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Int Agreements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>