force-app/main/default/objects/Int_Agreement__c/fields/Accrued_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Accrued_Interest_Amount__c</fullName>
    <description>Accrued Interest Amount</description>
    <label>Accrued Interest Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>