force-app/main/default/objects/Int_Agreement__c/fields/Agreement_Activation_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Activation_Date__c</fullName>
    <description>Agreement Activation Date</description>
    <label>Agreement Activation Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>