force-app/main/default/objects/Int_Agreement__c/fields/Agreement_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Maturity_Date__c</fullName>
    <description>Agreement Maturity Date</description>
    <label>Agreement Maturity Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>