force-app/main/default/objects/Int_Agreement__c/fields/Agreement_Original_Duration__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Original_Duration__c</fullName>
    <description>Agreement Original Duration</description>
    <label>Agreement Original Duration</label>
    <length>19</length>
    <type>Text</type>
</CustomField>