force-app/main/default/objects/Int_Agreement__c/fields/Agreement_Rate__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Rate__c</fullName>
    <description>Agreement Rate</description>
    <label>Agreement Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>