force-app/main/default/objects/Int_Agreement__c/fields/Agreement_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Start_Date__c</fullName>
    <description>Agreement Start Date</description>
    <label>Agreement Start Date</label>
    <type>Date</type>
</CustomField>