force-app/main/default/objects/Int_Agreement__c/fields/Agreement_Status__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Status__c</fullName>
    <description>Agreement Status</description>
    <label>Agreement Status</label>
    <length>10</length>
    <type>Text</type>
</CustomField>