force-app/main/default/objects/Int_Agreement__c/fields/Agreement_Termination_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Termination_Date__c</fullName>
    <description>Agreement Termination Date</description>
    <label>Agreement Termination Date</label>
    <type>Date</type>
</CustomField>