force-app/main/default/objects/Int_Agreement__c/fields/Agreement_Write_Off_Date__c.field-meta.xml
<CustomField>
    <fullName>Agreement_Write_Off_Date__c</fullName>
    <description>Agreement Write Off Date</description>
    <label>Agreement Write Off Date</label>
    <type>Date</type>
</CustomField>