force-app/main/default/objects/Int_Agreement__c/fields/Amortization_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Amortization_Type_Code__c</fullName>
    <description>Amortization Type Code</description>
    <label>Amortization Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>