force-app/main/default/objects/Int_Agreement__c/fields/Arrears_Amount__c.field-meta.xml
<CustomField>
    <fullName>Arrears_Amount__c</fullName>
    <description>Arrears Amount</description>
    <label>Arrears Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>