force-app/main/default/objects/Int_Agreement__c/fields/Billing_Collection_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Billing_Collection_Indicator__c</fullName>
    <description>Billing Collection Indicator</description>
    <label>Billing Collection Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>