force-app/main/default/objects/Int_Agreement__c/fields/Brokered_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Brokered_Indicator__c</fullName>
    <description>Brokered Indicator</description>
    <label>Brokered Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>