force-app/main/default/objects/Int_Agreement__c/fields/Costs_Of_Funds_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Costs_Of_Funds_Percentage__c</fullName>
    <description>Costs Of Funds Percentage</description>
    <label>Costs Of Funds Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>