force-app/main/default/objects/Int_Agreement__c/fields/Current_Interest_Rate_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Current_Interest_Rate_Type_Code__c</fullName>
    <description>Current Interest Rate Type Code</description>
    <label>Current Interest Rate Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>