force-app/main/default/objects/Int_Agreement__c/fields/Day_Count_Convention_Code__c.field-meta.xml
<CustomField>
    <fullName>Day_Count_Convention_Code__c</fullName>
    <description>Day Count Convention Code</description>
    <label>Day Count Convention Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>