force-app/main/default/objects/Int_Agreement__c/fields/Days_In_Arrears__c.field-meta.xml
<CustomField>
    <fullName>Days_In_Arrears__c</fullName>
    <description>Days In Arrears</description>
    <label>Days In Arrears</label>
    <length>19</length>
    <required>true</required>
    <type>Text</type>
</CustomField>