force-app/main/default/objects/Int_Agreement__c/fields/Deal_Date__c.field-meta.xml
<CustomField>
    <fullName>Deal_Date__c</fullName>
    <description>Deal Date</description>
    <label>Deal Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>