force-app/main/default/objects/Int_Agreement__c/fields/Delinquency_Reason_Code__c.field-meta.xml
<CustomField>
    <fullName>Delinquency_Reason_Code__c</fullName>
    <description>Delinquency Reason Code</description>
    <label>Delinquency Reason Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>