force-app/main/default/objects/Int_Agreement__c/fields/Deposit_Payment_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deposit_Payment_Amount__c</fullName>
    <description>Deposit Payment Amount</description>
    <label>Deposit Payment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>