force-app/main/default/objects/Int_Agreement__c/fields/EAD_Ex_Post__c.field-meta.xml
<CustomField>
    <fullName>EAD_Ex_Post__c</fullName>
    <description>EAD Ex Post</description>
    <label>EAD Ex Post</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>