force-app/main/default/objects/Int_Agreement__c/fields/Encumbered_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Encumbered_Indicator__c</fullName>
    <label>Encumbered Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>