force-app/main/default/objects/Int_Agreement__c/fields/Encumbered_Maturity_Date__c.field-meta.xml
<CustomField>
    <fullName>Encumbered_Maturity_Date__c</fullName>
    <description>Encumbered Maturity Date</description>
    <label>Encumbered Maturity Date</label>
    <type>Date</type>
</CustomField>