force-app/main/default/objects/Int_Agreement__c/fields/Encumbered_Original_Date__c.field-meta.xml
<CustomField>
    <fullName>Encumbered_Original_Date__c</fullName>
    <description>Encumbered Original Date</description>
    <label>Encumbered Original Date</label>
    <type>Date</type>
</CustomField>