force-app/main/default/objects/Int_Agreement__c/fields/Facility_Number__c.field-meta.xml
<CustomField>
    <fullName>Facility_Number__c</fullName>
    <description>Facility Number</description>
    <label>Facility Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>