force-app/main/default/objects/Int_Agreement__c/fields/Facility_Source_System__c.field-meta.xml
<CustomField>
    <fullName>Facility_Source_System__c</fullName>
    <description>Facility Source System</description>
    <label>Facility Source System</label>
    <length>50</length>
    <type>Text</type>
</CustomField>