force-app/main/default/objects/Int_Agreement__c/fields/Fixed_Rate_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Fixed_Rate_Period_End_Date__c</fullName>
    <description>Fixed Rate Period End Date</description>
    <label>Fixed Rate Period End Date</label>
    <type>Date</type>
</CustomField>