force-app/main/default/objects/Int_Agreement__c/fields/Floating_Rate_Cap__c.field-meta.xml
<CustomField>
    <fullName>Floating_Rate_Cap__c</fullName>
    <description>Floating Rate Cap</description>
    <label>Floating Rate Cap</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>