force-app/main/default/objects/Int_Agreement__c/fields/Floating_Rate_Freq_Refresh_Code__c.field-meta.xml
<CustomField>
    <fullName>Floating_Rate_Freq_Refresh_Code__c</fullName>
    <description>Floating Rate Freq Refresh Code</description>
    <label>Floating Rate Freq Refresh Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>