force-app/main/default/objects/Int_Agreement__c/fields/Floating_Rate_Frequency__c.field-meta.xml
<CustomField>
    <fullName>Floating_Rate_Frequency__c</fullName>
    <description>Floating Rate Frequency</description>
    <label>Floating Rate Frequency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>