force-app/main/default/objects/Int_Agreement__c/fields/Floating_Rate_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Floating_Rate_Period_End_Date__c</fullName>
    <description>Floating Rate Period End Date</description>
    <label>Floating Rate Period End Date</label>
    <type>Date</type>
</CustomField>