force-app/main/default/objects/Int_Agreement__c/fields/Floating_Rate_Spread__c.field-meta.xml
<CustomField>
    <fullName>Floating_Rate_Spread__c</fullName>
    <description>Floating Rate Spread</description>
    <label>Floating Rate Spread</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>