force-app/main/default/objects/Int_Agreement__c/fields/Funding_Rate__c.field-meta.xml
<CustomField>
    <fullName>Funding_Rate__c</fullName>
    <description>Funding Rate</description>
    <label>Funding Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>