force-app/main/default/objects/Int_Agreement__c/fields/GL_Code_Block__c.field-meta.xml
<CustomField>
    <fullName>GL_Code_Block__c</fullName>
    <description>GL Code Block</description>
    <label>GL Code Block</label>
    <length>50</length>
    <type>Text</type>
</CustomField>