force-app/main/default/objects/Int_Agreement__c/fields/Interest_Only_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Interest_Only_End_Date__c</fullName>
    <description>Interest Only End Date</description>
    <label>Interest Only End Date</label>
    <type>Date</type>
</CustomField>