force-app/main/default/objects/Int_Agreement__c/fields/Interest_Rate_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Interest_Rate_Type_Code__c</fullName>
    <description>Interest Rate Type Code</description>
    <label>Interest Rate Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>