force-app/main/default/objects/Int_Agreement__c/fields/LGD_Lookup_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>LGD_Lookup_Type_Code__c</fullName>
    <description>LGD Lookup Type Code</description>
    <label>LGD Lookup Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>