force-app/main/default/objects/Int_Agreement__c/fields/LGD_Percentage__c.field-meta.xml
<CustomField>
    <fullName>LGD_Percentage__c</fullName>
    <description>LGD Percentage</description>
    <label>LGD Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>