force-app/main/default/objects/Int_Agreement__c/fields/Maturity_Options_Code__c.field-meta.xml
<CustomField>
    <fullName>Maturity_Options_Code__c</fullName>
    <description>Maturity Options Code</description>
    <label>Maturity Options Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>