force-app/main/default/objects/Int_Agreement__c/fields/Net_Principal_Balance_Amount__c.field-meta.xml
<CustomField>
    <fullName>Net_Principal_Balance_Amount__c</fullName>
    <description>Net Principal Balance Amount</description>
    <label>Net Principal Balance Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>