force-app/main/default/objects/Int_Agreement__c/fields/On_Balance_Indicator__c.field-meta.xml
<CustomField>
    <fullName>On_Balance_Indicator__c</fullName>
    <description>On Balance Indicator</description>
    <label>On Balance Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>