force-app/main/default/objects/Int_Agreement__c/fields/Payment_Frequency_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency_Code__c</fullName>
    <description>Payment Frequency Code</description>
    <label>Payment Frequency Code</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>