force-app/main/default/objects/Int_Agreement__c/fields/Payment_Frequency_Interest_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency_Interest_Code__c</fullName>
    <description>Payment Frequency Interest Code</description>
    <label>Payment Frequency Interest Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>