force-app/main/default/objects/Int_Agreement__c/fields/Payment_Method_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Method_Code__c</fullName>
    <description>Payment Method Code</description>
    <label>Payment Method Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>