force-app/main/default/objects/Int_Agreement__c/fields/Recourse_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Recourse_Indicator__c</fullName>
    <description>Recourse Indicator</description>
    <label>Recourse Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>