force-app/main/default/objects/Int_Agreement__c/fields/Renewable_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Renewable_Indicator__c</fullName>
    <description>Renewable Indicator</description>
    <label>Renewable Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>