force-app/main/default/objects/Int_Agreement__c/fields/Risk_Costs__c.field-meta.xml
<CustomField>
    <fullName>Risk_Costs__c</fullName>
    <description>Risk Costs</description>
    <label>Risk Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>