force-app/main/default/objects/Int_Agreement__c/fields/Securitization_Identifier__c.field-meta.xml
<CustomField>
    <fullName>Securitization_Identifier__c</fullName>
    <description>Securitization Identifier</description>
    <label>Securitization Identifier</label>
    <length>50</length>
    <type>Text</type>
</CustomField>