force-app/main/default/objects/Int_Agreement__c/fields/Securitization_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Securitization_Indicator__c</fullName>
    <description>Securitization Indicator</description>
    <label>Securitization Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>