force-app/main/default/objects/Int_Agreement__c/fields/Securitization_Type_Code__c.field-meta.xml
<CustomField>
    <fullName>Securitization_Type_Code__c</fullName>
    <description>Securitization Type Code</description>
    <label>Securitization Type Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>