force-app/main/default/objects/Int_Agreement__c/fields/Syndication_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Syndication_Indicator__c</fullName>
    <description>Syndication Indicator</description>
    <label>Syndication Indicator</label>
    <length>1</length>
    <type>Text</type>
</CustomField>