force-app/main/default/objects/Int_Agreement__c/fields/Syndication_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Syndication_Percentage__c</fullName>
    <description>Syndication Percentage</description>
    <label>Syndication Percentage</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>