force-app/main/default/objects/Int_Agreement__c/fields/System_Program_Description__c.field-meta.xml
<CustomField>
    <fullName>System_Program_Description__c</fullName>
    <description>System Program Description</description>
    <label>System Program Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>