force-app/main/default/objects/Int_Agreement__c/fields/System_Program_Number__c.field-meta.xml
<CustomField>
    <fullName>System_Program_Number__c</fullName>
    <description>System Program Number</description>
    <label>System Program Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>