force-app/main/default/objects/Int_Agreement__c/fields/System_Selling_Party_Description__c.field-meta.xml
<CustomField>
    <fullName>System_Selling_Party_Description__c</fullName>
    <description>System Selling Party Description</description>
    <label>System Selling Party Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>