force-app/main/default/objects/Int_Agreement__c/fields/System_Selling_Party_Number__c.field-meta.xml
<CustomField>
    <fullName>System_Selling_Party_Number__c</fullName>
    <description>System Selling Party Number</description>
    <label>System Selling Party Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>