force-app/main/default/objects/Int_Agreement__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Agreement_Number__c</columns>
    <columns>Agreement_Status__c</columns>
    <columns>Agreement_Start_Date__c</columns>
    <columns>Agreement_Activation_Date__c</columns>
    <columns>Agreement_Maturity_Date__c</columns>
    <columns>Agreement_Rate__c</columns>
    <columns>GL_Code_Block__c</columns>
    <columns>System_Program_Number__c</columns>
    <columns>System_Program_Description__c</columns>
    <columns>Floating_Rate_Cap__c</columns>
    <columns>Syndication_Indicator__c</columns>
    <columns>Syndication_Percentage__c</columns>
    <columns>Committed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>